<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background_color">

    <!-- 顶部图片 -->
    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="30%"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login_logo" />

    <!-- 用户名-->
    <EditText
        android:id="@+id/et_login_name"
        android:layout_below="@+id/iv_login_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="#ff3b3b3b"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="bottom"
        android:textCursorDrawable="@drawable/login_cursor"
        android:hint="@string/input_name">
    </EditText>

    <!-- 密码 -->
    <EditText
        android:id="@+id/et_login_password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_login_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="10%"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="#ff3b3b3b"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="bottom"
        android:textCursorDrawable="@drawable/login_cursor"
        android:hint="@string/input_password">
    </EditText>

    <!-- 自动登录 -->
    <CheckBox
        android:id="@+id/cb_login_auto_login"
        android:layout_below="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_heightPercent="8%"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/auto_login"
        android:textStyle="bold" >
    </CheckBox>

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/cb_login_auto_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="11%"
        android:text="@string/login"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@drawable/login_button"
        android:radius="10dp"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/fab_margin" />

    <!-- 底部 -->
    <LinearLayout
        android:id="@+id/ll_login_bottom"
        android:layout_below="@+id/btn_login"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_heightPercent="12%"
        android:layout_margin="@dimen/fab_margin"
        android:gravity="center">
        <!-- 找回密码 -->
        <TextView
            android:id="@+id/tv_login_retrieve_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/retrieve_password"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!-- 中间隔开 -->
        <TextView
            android:id="@+id/tv_login_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/separator"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!-- 立即注册 -->
        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_now"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- 以上用了81%的高度 -->

</android.support.percent.PercentRelativeLayout>